# git_lab_rust

./: .gitignore  .gitlab-ci.yml  .tmux  CHANGELOG.md  Cargo.toml  INSTALL  LICENSE  README.md  build.rs  justfile  rustfmt.toml  tarpaulin.toml
ci/: changelog.sh  release.sh  relnotes.sh
man/: man.rs
src/: args.rs  cmds.rs.old  config.rs  gitlab.rs  macros.rs  main.rs  subcommand.rs  utils.rs
src/cmds/: gen_subc.rs  init.rs  merge_request.rs  project.rs
src/cmds/issue/: create.rs  list.rs  mod.rs  open.rs  quick_edit.rs  show.rs
src/cmds/mr/: approve.rs  checkout.rs  create.rs  list.rs  merge.rs  mod.rs  open.rs  quick_edit.rs  rebase.rs  show.rs  unapprove.rs
src/cmds/project/: attach.rs  create.rs  mod.rs  open.rs  show.rs
src/graphql/: ProjectsWithRemotes.graphql  SearchForGitURLs.graphql  schema.json  search_for_open_mr.graphql
tests/: base-integration-tests.rs  cli-invocation-tests.rs  init_integration_tests.rs
tests/common/: mod.rs
tests/data/: project.json
