[package]
name = "git_lab_cli"
version = "0.17.0"
authors = ["Bradley Wood <git@bradleywood.com>"]
edition = "2018"
description = "A custom git command for interacting with a GitLab server"
documentation = "https://docs.rs/git_lab_cli"
readme = "README.md"
repository = "https://gitlab.com/bradwood/git-lab-rust"
homepage = "https://gitlab.com/bradwood/git-lab-rust"
keywords = ["git", "Gitlab", "cli"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT"
build = "build.rs"

[dependencies]
anyhow = "1.0"
dialoguer = "0.6"
git2 = "0.13"
gitlab = "0.1302"
lazy_static = "1.4"
log = "0.4"
loggerv = "0.7"
serde_json = "1.0.52"
serde = "1.0.106"
url = "2.1.1"
regex = "1"
graphql_client = "0.8"
webbrowser = "0.5.4"
chrono = "0.4.11"
termimad = "0.8.23"
crossterm = "0.17.5"
# prettytable-rs = "0.8.0"
# indenter = "0.3.0"
colored = "1.9.3"
chrono-humanize = "0.0.11"
textwrap = "0.11.0"
humantime = "2.0.1"
comfy-table = "0.1.1"
slugify = "0.1.0"

[dependencies.clap]
version = "2.33.0"
default-features = true
features = ["wrap_help", "suggestions", "color"]

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.17.0"

[dev-dependencies]
assert_cmd = "0.12"
assert_fs = "1.0"
lazy_static = "1.4"
predicates = "1.0"
rexpect = "0.3"
rstest = "0.6"

[build-dependencies]
man = "0.3.0"

[[bin]]
name = "git-lab"
path = "src/main.rs"
